src/objects/Agreement__c.object
<CustomObject>
    <fields>
        <fullName>Account_Country__c</fullName>
        <formula>Agreement_Partner__r.BillingCountry</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Account Country</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Agreement_Duration__c</fullName>
        <label>Agreement Duration</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Agreement_End_Date__c</fullName>
        <description>Agreement End Date</description>
        <label>Agreement End Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Agreement_File_Link__c</fullName>
        <description>Agreement File Link - URL Field</description>
        <label>Agreement Folder Link</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>Agreement_Officer__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Agreement Officer</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Agreements2</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Agreement_Partner__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <label>Agreement Partner</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Agreements (Agreement Partner)</relationshipLabel>
        <relationshipName>Agreements</relationshipName>
        <required>true</required>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Agreement_Stage__c</fullName>
        <label>Agreement Stage</label>
        <picklist>
            <picklistValues>
                <fullName>New</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>PI Approved</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>OU Approved</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Routed to OCC for Approval</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>OCC Approval</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Partner Signed</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>OCC Signed</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>OU Signed</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>TPO Signed/Agreement Finalized</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Agreement_Start_Date__c</fullName>
        <label>Agreement Start Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Agreement_Status__c</fullName>
        <label>Agreement Status</label>
        <picklist>
            <picklistValues>
                <fullName>Agreement In Process</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>Active</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Pending Amendment</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Canceled</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Expired</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Terminated</fullName>
            </picklistValues>
            <restrictedPicklist>true</restrictedPicklist>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Agreement_Subtype__c</fullName>
        <label>Agreement Subtype</label>
        <picklist>
            <controllingField>Agreement_Type__c</controllingField>
            <picklistValues>
                <fullName>Bilateral CRADA</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Consortium CRADA</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Equipment CRADA</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Material CRADA</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Incoming Material MTA</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Outgoing Material MTA</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Human Material MTA</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Incoming Information NDA</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Outgoing Information NDA</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Incoming Data DTA</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Outgoing Data DTA</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Equipment Loan to Non-Commercial Entities</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Memorandum of Understanding (No Funds)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>License Agreement</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Research Collaboration Agreement</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Other</fullName>
            </picklistValues>
            <restrictedPicklist>true</restrictedPicklist>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Agreement_Title__c</fullName>
        <label>Agreement Title</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Agreement_Type__c</fullName>
        <label>Agreement Type</label>
        <picklist>
            <picklistValues>
                <fullName>CRADA</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Data Transfer Agreement (DTA)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Material Transfer Agreement (MTA)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Non-Disclosure Agreement (NDA)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Other</fullName>
            </picklistValues>
            <restrictedPicklist>true</restrictedPicklist>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Allow_Expiration__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Allow Expiration</description>
        <label>Allow Expiration</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Animal_subject_Inclusion__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Animal subject Inclusion</description>
        <label>Animal subject Inclusion</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Award_information_provided__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Award Information Provided</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Billing_Contact__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Billing Contact</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Agreement (Billing Contact)</relationshipLabel>
        <relationshipName>Agreement2</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Certify_mfg_in_the_United_States__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>Collaborator certifies that it has a manufacturing presence in the United States.</inlineHelpText>
        <label>USA Manufacture Presence</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Classified__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Classified</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Consult_Div_Chief_or_Legal__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Consult Div Chief or Legal</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>ECCN_number__c</fullName>
        <inlineHelpText>Export Control Classification Number</inlineHelpText>
        <label>ECCN number</label>
        <length>5</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Email_address_for_invoices__c</fullName>
        <label>Email Address for Invoices</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>Export_Controlled__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Export Controlled</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Financial_Contribution__c</fullName>
        <description>Financial Contribution</description>
        <label>Financial Contribution</label>
        <length>175</length>
        <maskChar>X</maskChar>
        <maskType>all</maskType>
        <type>EncryptedText</type>
    </fields>
    <fields>
        <fullName>Foreign_Company_Name__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <inlineHelpText>Collaborator certifies that it is subject to the control of the following foreign company</inlineHelpText>
        <label>Foreign Company Name</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Agreement (Foreign Company Name)</relationshipLabel>
        <relationshipName>Agreement1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Foreign_Government_name__c</fullName>
        <inlineHelpText>Collaborator certifies that it is subject to the control of the following foreign government</inlineHelpText>
        <label>Foreign Government Name</label>
        <length>86</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Foreign_Govt_Foreign_Company__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>Collaborator certifies that it is not subject to the control of any foreign government or foreign company</inlineHelpText>
        <label>Foreign Govt/Foreign Company</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Funding_Agency__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Funding Agency</description>
        <label>Funding Agency</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>Account.RecordType.Name</field>
                <operation>equals</operation>
                <value>Government</value>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Agreement (Funding Agency)</relationshipLabel>
        <relationshipName>Agreement2</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Funding_Award_Number__c</fullName>
        <label>Funding Award Number</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Human_Subjects_Inclusion__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Human Subjects Inclusion</description>
        <label>Human Subjects Inclusion</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Incorporated_Territories_of_US__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>Collaborator certifies that it is incorporated under the laws of one of the states or territories of the United States</inlineHelpText>
        <label>Incorporated/Territories of US</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>International_Office_IAAO__c</fullName>
        <defaultValue>false</defaultValue>
        <description>International Office (IAAO)</description>
        <label>International Office (IAAO)</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Invoice_Distribution_Method__c</fullName>
        <label>Invoice Distribution Method</label>
        <picklist>
            <picklistValues>
                <fullName>Mail</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Email</fullName>
            </picklistValues>
            <restrictedPicklist>true</restrictedPicklist>
        </picklist>
        <type>MultiselectPicklist</type>
    </fields>
    <fields>
        <fullName>Mailing_Address_For_Invoices__c</fullName>
        <label>Mailing Address for Invoices</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>NIST_Associates__c</fullName>
        <label>NIST Associates</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>NIST_Division_Chief_Approval_Memo__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <inlineHelpText>Secondary approval of the Project memo.  

NIST Division Chief if Division Chief is a a CRM user. 

Otherwise left blank.</inlineHelpText>
        <label>NIST Division Chief Approver</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Agreements1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>NIST_Division_Chief__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>NIST Division Chief</description>
        <label>NIST Division Chief</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>Contact.RecordTypeId</field>
                <operation>equals</operation>
                <value>Staff/Associate</value>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Agreement (NIST Division Chief)</relationshipLabel>
        <relationshipName>Agreement1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>NIST_Division__c</fullName>
        <formula>TEXT(NIST_PI__r.Division__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>NIST Division</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>NIST_Equipment__c</fullName>
        <label>NIST Equipment</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>NIST_Facilities__c</fullName>
        <label>NIST Facilities</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>NIST_IP__c</fullName>
        <inlineHelpText>Should be limited to Docket Number, Application Number, Patent Number or Title.</inlineHelpText>
        <label>NIST Inventions</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>NIST_OU_Director__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>NIST OU Director</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Agreement</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>NIST_OU__c</fullName>
        <formula>TEXT(NIST_PI__r.NIST_OU__c)</formula>
        <label>NIST OU</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>NIST_PI_Approval_Memo__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <inlineHelpText>Initial approval of the Project memo.

NIST PI if the PI is a CRM user.

Otherwise left blank.</inlineHelpText>
        <label>NIST PI Approver</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Agreements</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>NIST_PI__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>NIST PI</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>Contact.RecordTypeId</field>
                <operation>equals</operation>
                <value>Staff/Associate</value>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Agreements (NIST PI)</relationshipLabel>
        <relationshipName>Agreements</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>NIST_Personel__c</fullName>
        <description>Text Box to capture names and email addresses</description>
        <label>NIST Personnel</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>NIST_Services__c</fullName>
        <label>NIST Services</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Partner_Equipment__c</fullName>
        <description>Partner Equipment</description>
        <label>Partner Equipment</label>
        <length>175</length>
        <maskChar>X</maskChar>
        <maskType>all</maskType>
        <type>EncryptedText</type>
    </fields>
    <fields>
        <fullName>Partner_Estimated_In_Kind_Value__c</fullName>
        <description>Partner Estimated In Kind Value</description>
        <label>Partner Estimated In Kind Value</label>
        <length>175</length>
        <maskChar>X</maskChar>
        <maskType>all</maskType>
        <type>EncryptedText</type>
    </fields>
    <fields>
        <fullName>Partner_Facilities__c</fullName>
        <description>Partner Facilities</description>
        <label>Partner Facilities</label>
        <length>175</length>
        <maskChar>X</maskChar>
        <maskType>all</maskType>
        <type>EncryptedText</type>
    </fields>
    <fields>
        <fullName>Partner_IP__c</fullName>
        <description>Partner IP</description>
        <label>Partner IP</label>
        <length>175</length>
        <maskChar>X</maskChar>
        <maskType>all</maskType>
        <type>EncryptedText</type>
    </fields>
    <fields>
        <fullName>Partner_PI__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Partner PI</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Agreement (Partner PI)</relationshipLabel>
        <relationshipName>Agreement3</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Partner_Personel__c</fullName>
        <label>Partner Personnel</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Partner_Services__c</fullName>
        <description>Partner Services</description>
        <label>Partner Services</label>
        <length>175</length>
        <maskChar>X</maskChar>
        <maskType>all</maskType>
        <type>EncryptedText</type>
    </fields>
    <fields>
        <fullName>Patent_Office__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Patent Officer</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Special_Invoice_instructions__c</fullName>
        <label>Special Invoice Instructions</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Status_Animal_Sub_incl__c</fullName>
        <label>Status</label>
        <picklist>
            <controllingField>Animal_subject_Inclusion__c</controllingField>
            <picklistValues>
                <fullName>Notification Sent</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Approved</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Memo Received</fullName>
            </picklistValues>
            <restrictedPicklist>true</restrictedPicklist>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Status_Export_Controller__c</fullName>
        <label>Status</label>
        <picklist>
            <picklistValues>
                <fullName>​Exemption for Export license</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Export license Obtained</fullName>
            </picklistValues>
            <restrictedPicklist>true</restrictedPicklist>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Status_Human_Sub_Inc__c</fullName>
        <label>Status</label>
        <picklist>
            <controllingField>Human_Subjects_Inclusion__c</controllingField>
            <picklistValues>
                <fullName>Notification Sent</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Approved</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Memo Received</fullName>
            </picklistValues>
            <restrictedPicklist>true</restrictedPicklist>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Status_International_Office__c</fullName>
        <label>Status</label>
        <picklist>
            <controllingField>International_Office_IAAO__c</controllingField>
            <picklistValues>
                <fullName>Notification Sent</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Approved</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Memo Received</fullName>
            </picklistValues>
            <restrictedPicklist>true</restrictedPicklist>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Status_Patent_Office__c</fullName>
        <label>Status</label>
        <picklist>
            <controllingField>Patent_Office__c</controllingField>
            <picklistValues>
                <fullName>Notification Sent</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Approved</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Memo Received</fullName>
            </picklistValues>
            <restrictedPicklist>true</restrictedPicklist>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Status_US_Trade_Rep__c</fullName>
        <label>Status</label>
        <picklist>
            <controllingField>US_Trade_Representative__c</controllingField>
            <picklistValues>
                <fullName>Notification Sent</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Memo Received</fullName>
            </picklistValues>
            <restrictedPicklist>true</restrictedPicklist>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>US_Trade_Representative__c</fullName>
        <defaultValue>false</defaultValue>
        <description>US Trade Representative</description>
        <label>US Trade Representative</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Utilization_of_Federal_Funds__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Utilization of Federal Funds</description>
        <label>Utilization of Federal Funds</label>
        <type>Checkbox</type>
    </fields>
    <label>Agreement</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>Agreement_Title__c</columns>
        <columns>Agreement_Type__c</columns>
        <columns>Agreement_Stage__c</columns>
        <columns>Agreement_Status__c</columns>
        <columns>NIST_PI__c</columns>
        <columns>CREATED_DATE</columns>
        <columns>LAST_UPDATE</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <listViews>
        <fullName>TPO_Users_Agreement</fullName>
        <filterScope>Queue</filterScope>
        <label>TPO Users Queue</label>
        <queue>TPO_Users_Queue</queue>
        <sharedTo>
            <allInternalUsers></allInternalUsers>
        </sharedTo>
    </listViews>
    <nameField>
        <displayFormat>AG-{0000}</displayFormat>
        <label>Agreement Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Agreements</pluralLabel>
    <recordTypes>
        <fullName>New_Agreement</fullName>
        <active>true</active>
        <description>New Agreement</description>
        <label>New Agreement</label>
    </recordTypes>
    <sharingModel>Private</sharingModel>
    <validationRules>
        <fullName>Award_info_provided_Award_Funding</fullName>
        <active>true</active>
        <description>Funding Award Number is required</description>
        <errorConditionFormula>AND(ISBLANK(Funding_Award_Number__c), Award_information_provided__c =True)</errorConditionFormula>
        <errorDisplayField>Funding_Award_Number__c</errorDisplayField>
        <errorMessage>Funding Award Number is required</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Award_info_provided_Funding_Agency</fullName>
        <active>true</active>
        <description>Funding agency is required When Award Information provided.</description>
        <errorConditionFormula>AND(ISBLANK(Funding_Agency__c), Award_information_provided__c =True)</errorConditionFormula>
        <errorDisplayField>Funding_Agency__c</errorDisplayField>
        <errorMessage>Funding agency is required</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Memo_Received</fullName>
        <active>true</active>
        <description>Special Case Memo&apos;s must be Received .</description>
        <errorConditionFormula>ISPICKVAL( Agreement_Stage__c ,  &quot;Routed to OCC for approval&quot;)
 &amp;&amp; 
(Patent_Office__c = TRUE 
&amp;&amp;
 NOT(ISPICKVAL( Status_Patent_Office__c , &quot;Memo Received&quot;)))

|| 

 ISPICKVAL( Agreement_Stage__c ,  &quot;Routed to OCC for approval&quot;)
 &amp;&amp;  
(International_Office_IAAO__c = TRUE 
&amp;&amp;
NOT(ISPICKVAL(Status_International_Office__c , &quot;Memo Received&quot;)))

|| 
  ISPICKVAL( Agreement_Stage__c ,  &quot;Routed to OCC for approval&quot;)
 &amp;&amp;
(US_Trade_Representative__c = TRUE 
&amp;&amp;
NOT(ISPICKVAL(Status_US_Trade_Rep__c , &quot;Memo Received&quot;)))
|| 
 ISPICKVAL( Agreement_Stage__c ,  &quot;Routed to OCC for approval&quot;)
 &amp;&amp;
(Human_Subjects_Inclusion__c = TRUE 
&amp;&amp;
NOT(ISPICKVAL(Status_Human_Sub_Inc__c  , &quot;Memo Received&quot;)))
|| 
ISPICKVAL( Agreement_Stage__c , &quot;Routed to OCC for approval&quot;) 
&amp;&amp; 
(Human_Subjects_Inclusion__c = TRUE 
&amp;&amp; 
NOT(ISPICKVAL(Status_Animal_Sub_incl__c , &quot;Memo Received&quot;)))</errorConditionFormula>
        <errorMessage>Special Case Memos must be Received before routing to OCC for approval.</errorMessage>
    </validationRules>
</CustomObject>